--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bootstrap": "^5.3.3",
     "lodash": "^4.17.21",
     "ng-zorro-antd": "^17.3.0",
+    "ngx-image-cropper": "^7.2.1",
     "ngx-webstorage": "^13.0.1",
     "rxjs": "~7.8.0",
     "ts-mixer": "^6.0.4",
