--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "@ckeditor/ckeditor5-engine": "^41.2.1",
     "@ckeditor/ckeditor5-utils": "^41.2.1",
     "@ckeditor/ckeditor5-watchdog": "^41.2.1",
-    "@vntechbuilding/custom-ckeditor": "0.0.6",
+    "@vntechbuilding/custom-ckeditor": "0.0.7",
     "bootstrap": "^5.3.3",
+    "hammerjs": "^2.0.8",
     "lodash": "^4.17.21",
     "ng-zorro-antd": "^17.3.0",
+    "ngx-clipboard": "^16.0.0",
     "ngx-image-cropper": "^7.2.1",
     "ngx-webstorage": "^13.0.1",
     "rxjs": "~7.8.0",
